# lingdocs

./: Cargo.toml  Lingdocs.toml  README.md  index.html  main.html  style.css  template.html
.github/workflows/: build.yml
assets/: index.ling  main.ling  style.scss  template.html
example/: Lingdocs.toml
example/src/: index.ling  other.ling
src/: args.rs  case.rs  compile.rs  config.rs  convert.rs  lib.rs  main.rs  utils.rs
