[package]
name = "lingdocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
css-minify = "0.3.1"
grass = "0.12.1"
html-escape = "0.2.13"
lazy_static = "1.4.0"
minify-html = "0.10.7"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"
walkdir = "2.3.2"
